Började med att skapa en grid ram

--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
             </nav>
 
              <script src="js/script.js"></script>
-        </header>
 
+            <section id="bild">Buttocks</section>
+            <section id="bild2">Buttocks</section>
+            <section id="bild3">Buttocks</section>
+            
+            <footer>Footer</footer>
+
+
+
+        </header>
 
 
     </div>
