Ändra namn i nav

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <div class="line3"></div>
                 </div>
                 <ul class="navLinks">
-                     <li><a href="leverantor.html">Leverantör</a></li>
-                     <li><a href="#">Placeholder</a></li>
+                     <li><a href="leverantor.html">Suppliers</a></li>
+                     <li><a href="#">Installers</a></li>
                      <li><a href="#">Placeholder</a></li>
                      <li><a href="#">Placeholder</a></li>
                 </ul> 
