--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <div class="line3"></div>
                 </div>
                 <ul class="navLinks">
+                    <li><a href="kopsida.html">Store</a></li>
                      <li><a href="leverantor.html">Suppliers</a></li>
-                     <li><a href="#">Installers</a></li>
-                     <li><a href="#">Placeholder</a></li>
-                     <li><a href="#">Placeholder</a></li>
+                     <li><a href="monterare.html">Installers</a></li>
+                     <li><a href="index.html">Start</a></li>
                 </ul> 
             </nav>
 
