Lagt till bilder i köpsidan och även länkat till en ny betala.html

--- a/kopsida.html
+++ b/kopsida.html
@@ -32,19 +32,29 @@
         <article class="staircontainer">
 
             <ul class="starticle">
-                <div class="picture1"></div>
+                <a href="betala.html"><div class="picture1"></div></a>
+                
             </ul>
 
             <ul class="starticle">
-                <div class="picture2"></div>
+                <a href="betala.html"><div class="picture2"></div></a>
+
             </ul>
 
             <ul class="starticle">
-                <div class="picture3"></div>
+                <a href="betala.html"><div class="picture3"></div></a>
             </ul>
 
             <ul class="starticle">
-                <div class="picture4"></div>
+                <a href="betala.html"><div class="picture4"></div></a>
+            </ul>
+
+            <ul class="starticle">
+                <a href="betala.html"><div class="picture5"></div></a>
+            </ul>
+
+            <ul class="starticle">
+                <a href="betala.html"><div class="picture6"></div></a>
             </ul>
 
          </article>
