--- a/kopsida.html
+++ b/kopsida.html
@@ -33,28 +33,38 @@
 
             <ul class="starticle">
                 <a href="betala.html"><div class="picture1"></div></a>
-                
+                <li><a href="betala.html">Alex Shu</a> </li>
+                <li><a href="betala.html">$2,149.00</a> </li>
             </ul>
 
             <ul class="starticle">
                 <a href="betala.html"><div class="picture2"></div></a>
-
+                <li><a href="betala.html">Christina Dibernardo</a></li>
+                <li><a href="betala.html">$2,149.00</a> </li>
             </ul>
 
             <ul class="starticle">
                 <a href="betala.html"><div class="picture3"></div></a>
+                <li><a href="betala.html">Muzamil Soorma</a></li>
+                <li><a href="betala.html">$2,149.00</a> </li>
             </ul>
 
             <ul class="starticle">
                 <a href="betala.html"><div class="picture4"></div></a>
+                <li><a href="betala.html">Qinghong Shen</a></li>
+                <li><a href="betala.html">$2,149.00</a> </li>
             </ul>
 
             <ul class="starticle">
                 <a href="betala.html"><div class="picture5"></div></a>
+                <li><a href="betala.html">Garin Chadwick</a></li>
+                <li><a href="betala.html">$2,149.00</a> </li>
             </ul>
 
             <ul class="starticle">
                 <a href="betala.html"><div class="picture6"></div></a>
+                <li><a href="betala.html">Jason Briscoe</a></li>
+                <li><a href="betala.html">$2,149.00</a> </li>
             </ul>
 
          </article>
