Fixade så att sidan passade på mobilen, fbörjade även med betala sidan

--- a/betala.html
+++ b/betala.html
@@ -25,7 +25,17 @@
             </ul> 
         </nav>
 
-
+        <main class="container">
+            <a href="dontexist.html"><div class="cart"></div></a>
+            <a href="index.html"><div id="logo1"></div></a>
+            <article class="itemcontainer">
+             <div class="itemphoto1"></div>
+            <div class="iteminfo">
+                <h1>T-SHIRT</h1>
+                <h2>$2,149.00</h2>
+                <button class="button">add to cart</button>
+            </div>
+            </article>
 
 
 
@@ -45,5 +55,6 @@
 
     </div>
 
+    <footer class="feetsies"></footer>
 </body>
 </html>
