Klar med betala.html

--- a/betala.html
+++ b/betala.html
@@ -29,11 +29,11 @@
             <a href="dontexist.html"><div class="cart"></div></a>
             <a href="index.html"><div id="logo1"></div></a>
             <article class="itemcontainer">
-             <div class="itemphoto1"></div>
+             <div class="stairphoto1"></div>
             <div class="iteminfo">
-                <h1>T-SHIRT</h1>
+                <h1>Alex Shu</h1>
                 <h2>$2,149.00</h2>
-                <button class="button">add to cart</button>
+                <button class="button">Purchase</button>
             </div>
             </article>
 
