--- a/betala.html
+++ b/betala.html
@@ -23,18 +23,20 @@
                  <li><a href="monterare.html">Installers</a></li>
                  <li><a href="index.html">Start</a></li>
             </ul> 
+
+            <div id="logocontainer"><div id="logo">Stair Sex</div></div>
+
         </nav>
 
         <main class="container">
-            <a href="dontexist.html"><div class="cart"></div></a>
             <a href="index.html"><div id="logo1"></div></a>
             <article class="itemcontainer">
              <div class="stairphoto1"></div>
             <div class="iteminfo">
                 <h1>Alex Shu</h1>
-                <h2>$2,149.00</h2>
-                <button class="button">Purchase</button>
+                <h2>$2,149.00</h2>    
             </div>
+            <button class="button">Purchase</button>
             </article>
 
 
