--- a/kopsida.html
+++ b/kopsida.html
@@ -24,7 +24,9 @@
                  <li><a href="leverantor.html">Suppliers</a></li>
                  <li><a href="monterare.html">Installers</a></li>
                  <li><a href="index.html">Start</a></li>
-            </ul> 
+            </ul>
+
+            <div id="logocontainer"><div id="logo">Stair Sex</div></div>
         </nav>
       
         <article class="staircontainer">
