Fixat start sida samt lagt till logo

--- a/betala.html
+++ b/betala.html
@@ -10,7 +10,7 @@
 <body>
     
     <div id="wrapperb1">
-
+        
         <nav>
             <div class="burger">
                 <div class="line1"></div>
@@ -24,8 +24,7 @@
                  <li><a href="index.html">Start</a></li>
             </ul> 
 
-            <div id="logocontainer"><div id="logo">Stair Sex</div></div>
-
+            <div id="logocontainer"><a href="index.html"><div id="logo"></div></a></div>
         </nav>
 
         <main class="container">
@@ -57,6 +56,8 @@
 
     </div>
 
-    <footer class="feetsies"></footer>
+    <footer class="feetsies">
+        <li><a href="">Sök Job</a></li>
+    </footer>
 </body>
 </html>
