--- a/index.html
+++ b/index.html
@@ -23,13 +23,18 @@
                      <li><a href="monterare.html">Installers</a></li>
                      <li><a href="index.html">Start</a></li>
                 </ul> 
+
+                <div id="logocontainer"><a href="index.html"><div id="logo"></div></a></div>
             </nav>
 
             <div class="slideshow-container">
-              <div class="textbocks"><h1>Trapstar</h1></div>
+              <div class="textbocks"></div>
             </div>
 
-            
+            <footer class="feetsies">
+              <li><a href="">Sök Job</a></li>
+            </footer>
+
             <script src="js/script.js"></script>
 
 
